# bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README  dropboxtest3.py  package.json  requirements.txt
adaptors/: sensortagadaptor.py  sensortagadaptor4.py  sensortagadaptor5.py  testSensorTagAdaptor.py  wemoadaptor.py
aggregator/: .bridgecontroller.py.swp  .bridgecontroller2.py.swp  bridgecontroller.py  bridgecontroller2tcp.py  bridgecontroller2u.py  bridgecontroller3.py  bridgecontroller4.py  bridgecontroller5.py  livingcontroller.py
apps/: .eew_app.py.swp  .uwe_app.py.swp  CMakeLists.txt  accelapp.c  accelapp2.py  baseapp.c  baseapp.py  eew_app.py  example.py  living.py  living2.py  living3.py  living4.py  living5.py  living6.py  living7.py  printer.c  sensortagapp.c  tempmonitor.py  testLiving.py  uwe_app.py
bridgeconfig/: cbsupervisor.init  stuff.tar  wpa_supplicant.conf.proto
concentrator/: .concentrator.py.swp  CMakeLists.txt  cbclient.py  cbsocket.py  concentrator.c  concentrator.py  concentrator2.py  concentrator_a.py  conduit.py  createChannel.c  manager.sh  orig_manager.sh  setupChannel.c
devices/: CMakeLists.txt  basedev.c
drivers/: acceladaptor.py  acceladaptor2.py  sensortagadaptor.py  sensortagadaptor2.py  sensortagadaptor3.py  sensortagdriver.py  testSensorTagAdaptor.py  testaccel2.py
lib/: cbcommslib.py  cbconfig.py  cbutils.py  testlib.py
manager/: .cbmanager.py.swp  .discovery.py.swp  .wifisetup.py.swp  accel.csv  bridge.config  bridge.config.save  cblocaltest.sh  cbmanager.py  cbmanager.py.save  cbmanager_a.py  cbremotetest.sh  dev1accel  (+31 more)
(+61 files in other folders)
